--- a/.github/workflows/build-lineageos_dev.yml
+++ b/.github/workflows/build-lineageos_dev.yml
@@ -13,25 +13,70 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@main
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - name: Set up JDK
+      uses: actions/setup-java@main
       with:
-        java-version: 11
+        java-version: '21'
 
-    - name: Install Dependencies
+    - name: Initialization environment
+      id: init
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      working-directory: /
       run: |
-        sudo apt-get update
-        sudo apt-get install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git git-lfs gnupg gperf imagemagick lib32readline-dev lib32z1-dev libelf-dev liblz4-tool libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
+        echo -e "Current working directory: $(pwd)"
+
+        packages_install=(
+            "bc" 
+            "bison" 
+            "build-essential" 
+            "ccache" 
+            "curl" 
+            "flex"
+            "g++-multilib" 
+            "gcc-multilib" 
+            "git" 
+            "git-lfs" 
+            "gnupg"
+            "gperf" 
+            "imagemagick" 
+            "lib32readline-dev" 
+            "lib32z1-dev"
+            "libelf-dev" 
+            "liblz4-tool" 
+            "libsdl1.2-dev" 
+            "libssl-dev"
+            "libxml2" 
+            "libxml2-utils" 
+            "lzop" 
+            "pngcrush" 
+            "rsync"
+            "schedtool" 
+            "squashfs-tools" 
+            "xsltproc" 
+            "zip" 
+            "zlib1g-dev"
+        )
+
+        sudo -E apt-get -qq -y update
+        sudo -E apt-get -qq -y install "${packages_install[@]}"
+        sudo -E systemctl daemon-reload
+
+        echo "status=success" >> ${GITHUB_OUTPUT}
 
     - name: Set up ccache
+      id: ccache
+      if: ${{ 'true' == 'false' }} # disable
+      working-directory: /
       run: |
         export USE_CCACHE=1
         export CCACHE_EXEC=/usr/bin/ccache
         ccache -M 50G
 
     - name: Initialize LineageOS source
+      working-directory: /
       run: |
         mkdir -p ~/android/lineage
         cd ~/android/lineage
@@ -51,7 +96,23 @@ jobs:
         croot
         brunch ginkgo
 
+    - name: Upload OpenWrt to Release
+      id: release
+      uses: ncipollo/release-action@main
+      with:
+        name: "lineageos-build"
+        tag: "lineageos"
+        artifacts: "~/android/lineage/out/target/product/ginkgo/*.zip"
+        allowUpdates: true
+        removeArtifacts: false
+        replacesArtifacts: true
+        token: "${{ secrets.GITHUB_TOKEN }}"
+        # bodyFile: "${{ env.release_md }}"
+        body: "lineageos"
+
     - name: Upload build artifacts
+      id: artifact
+      if: ${{ 'true' == 'false' }} # disable
       uses: actions/upload-artifact@v2
       with:
         name: lineageos-build
