--- a/.github/workflows/build-lineageos_dev.yml
+++ b/.github/workflows/build-lineageos_dev.yml
@@ -1,12 +1,8 @@
-name: Build LineageOS
+name: (Dev) Build LineageOS
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  repository_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
