--- a/.github/workflows/build-lineageos_dev.yml
+++ b/.github/workflows/build-lineageos_dev.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@main
       with:
+        distribution: 'temurin'
         java-version: '21'
 
     - name: Initialization environment
@@ -105,4 +106,4 @@ jobs:
         token: "${{ secrets.GITHUB_TOKEN }}"
         # bodyFile: "${{ env.release_md }}"
         body: "lineageos"
-        
+
