--- a/.github/workflows/build-lineageos_dev.yml
+++ b/.github/workflows/build-lineageos_dev.yml
@@ -63,6 +63,36 @@ jobs:
 
         echo "status=success" >> ${GITHUB_OUTPUT}
 
+    - name: Create simulated physical disk
+        id: disk
+        if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
+        working-directory: /
+        run: |
+          echo -e "Current working directory: $(pwd)"
+          # 计算 /mnt 分区的可用空间（减去 1GB 作为缓冲）, 计算根分区的可用空间（减去 4GB 作为缓冲）
+          mnt_size=$(expr $(df -h /mnt | tail -1 | awk '{print $4}' | sed 's/[[:alpha:]]//g' | sed 's/\..*//') - 1)
+          root_size=$(expr $(df -h / | tail -1 | awk '{print $4}' | sed 's/[[:alpha:]]//g' | sed 's/\..*//') - 4)
+          # 创建一个大小为 mnt_size 的文件 /mnt/mnt.img, 创建一个大小为 root_size 的文件 /root.img
+          sudo truncate -s "${mnt_size}"G /mnt/mnt.img
+          sudo truncate -s "${root_size}"G /root.img
+          # 将这两个文件关联到 loop 设备, 在这两个 loop 设备上创建物理卷, 创建一个名为 github 的卷组，包含这两个物理卷
+          sudo losetup /dev/loop6 /mnt/mnt.img
+          sudo losetup /dev/loop7 /root.img
+          sudo pvcreate /dev/loop6
+          sudo pvcreate /dev/loop7
+          sudo vgcreate github /dev/loop6 /dev/loop7
+
+          # 在 github 卷组上创建一个名为 runner 的逻辑卷，使用所有可用空间, 在 runner 逻辑卷上创建一个 XFS 文件系统
+          sudo lvcreate -n runner -l 100%FREE github
+          sudo mkfs.xfs /dev/github/runner
+          # 创建一个挂载点 ${path_build}, 将 runner 逻辑卷挂载到 ${path_build}, 将 ${path_build} 的所有者和组更改为 runner
+          sudo mkdir -p ${path_build}
+          sudo mount /dev/github/runner ${path_build}
+          sudo chown -R runner.runner ${path_build}
+
+          df -Th
+          echo "status=success" >> ${GITHUB_OUTPUT}
+
     - name: Set up ccache
       id: ccache
       if: ${{ 'true' == 'false' }} # disable
@@ -73,25 +103,32 @@ jobs:
         ccache -M 50G
 
     - name: Initialize LineageOS source
+      env:
+        branch_lineage: lineage-18.1
       working-directory: /
       run: |
-        mkdir -p ~/android/lineage
-        cd ~/android/lineage
-        curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
-        chmod a+x ~/bin/repo
-        ~/bin/repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs
+        mkdir -p /android/lineage
+        cd /android/lineage
+        curl https://storage.googleapis.com/git-repo-downloads/repo > /bin/repo
+        chmod a+x /bin/repo
+        /bin/repo init -u https://github.com/LineageOS/android.git -b ${{ env.branch_lineage }} --git-lfs
+        echo "Repository initialized"
 
     - name: Sync LineageOS source
+      working-directory: /android/lineage
       run: |
-        cd ~/android/lineage
+        # cd /android/lineage
         repo sync -j4
+        echo "Source code synced"
 
     - name: Build LineageOS
+      working-directory: /android/lineage
       run: |
         source build/envsetup.sh
         breakfast ginkgo
         croot
         brunch ginkgo
+        echo "Build completed"
 
     - name: Upload OpenWrt to Release
       id: release
@@ -99,7 +136,7 @@ jobs:
       with:
         name: "lineageos-build"
         tag: "lineageos"
-        artifacts: "~/android/lineage/out/target/product/ginkgo/*.zip"
+        artifacts: "/android/lineage/out/target/product/ginkgo/*.zip"
         allowUpdates: true
         removeArtifacts: false
         replacesArtifacts: true
