--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -65,7 +65,7 @@ jobs:
 
     - name: Create simulated physical disk
       id: disk
-      if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
+      # if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
       working-directory: /
       run: |
         echo -e "Current working directory: $(pwd)"
