--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -26,39 +26,42 @@ jobs:
         echo -e "Current working directory: $(pwd)"
 
         packages_install=(
-            "bc" 
-            "bison" 
-            "build-essential" 
-            "ccache" 
-            "curl" 
-            "flex"
-            "g++-multilib" 
-            "gcc-multilib" 
-            "git" 
-            "git-lfs" 
-            "gnupg"
-            "gperf" 
-            "imagemagick" 
-            "lib32readline-dev" 
-            "lib32z1-dev"
-            "libelf-dev" 
-            "liblz4-tool" 
-            "libsdl1.2-dev" 
-            "libssl-dev"
-            "libxml2" 
-            "libxml2-utils" 
-            "lzop" 
-            "pngcrush" 
-            "rsync"
-            "schedtool" 
-            "squashfs-tools" 
-            "xsltproc" 
-            "zip" 
-            "zlib1g-dev"
+          "bc" 
+          "bison" 
+          "build-essential" 
+          "ccache" 
+          "curl" 
+          "flex"
+          "g++-multilib" 
+          "gcc-multilib" 
+          "git" 
+          "git-lfs" 
+          "gnupg"
+          "gperf" 
+          "imagemagick" 
+          "lib32readline-dev" 
+          "lib32z1-dev"
+          "libelf-dev" 
+          "liblz4-tool" 
+          "libsdl1.2-dev" 
+          "libssl-dev"
+          "libxml2" 
+          "libxml2-utils" 
+          "lzop" 
+          "pngcrush" 
+          "rsync"
+          "schedtool" 
+          "squashfs-tools" 
+          "xsltproc" 
+          "zip" 
+          "zlib1g-dev"
         )
-
+        packages_extra=(
+          "python3"
+        )
         sudo -E apt-get -qq -y update
         sudo -E apt-get -qq -y install "${packages_install[@]}"
+        sudo -E apt-get -y install "${packages_extra[@]}"
         sudo -E systemctl daemon-reload
 
         echo "status=success" >> ${GITHUB_OUTPUT}
