--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -68,7 +68,7 @@ jobs:
 
     - name: Create simulated physical disk
       id: disk
-      # if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
+      if: ${{ 'true' == 'false' }} # disable
       env:
         path_build: /android/lineage
       working-directory: /
