--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -100,7 +100,7 @@ jobs:
 
     - name: Set up ccache
       id: ccache
-      if: ${{ 'true' == 'false' }} # disable
+      # if: ${{ 'true' == 'false' }} # disable
       working-directory: /
       run: |
         export USE_CCACHE=1
@@ -118,6 +118,7 @@ jobs:
         mkdir -p /android/lineage
         cd /android/lineage
         ~/bin/repo init -u https://github.com/LineageOS/android.git -b ${{ env.branch_lineage }} --git-lfs
+        df -Th
         echo "Repository initialized"
 
     - name: Sync LineageOS source
