--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -112,10 +112,10 @@ jobs:
         branch_lineage: lineage-18.1
       working-directory: /
       run: |
-        mkdir -p ~/bin
+        sudo mkdir -p ~/bin
         curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
-        chmod a+x ~/bin/repo
-        mkdir -p /android/lineage
+        sudo chmod a+x ~/bin/repo
+        sudo mkdir -p /android/lineage
         cd /android/lineage
         ~/bin/repo init -u https://github.com/LineageOS/android.git -b ${{ env.branch_lineage }} --git-lfs
         df -Th
