--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -9,8 +9,8 @@ jobs:
     name: Build LineageOS
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@main
+      # - name: Checkout repository
+      #   uses: actions/checkout@main
 
       - name: Clear environment
         id: clearinit
