--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -22,10 +22,11 @@ jobs:
           echo -e "Current working directory: $(pwd)"
           # 删除docker所有镜像
           docker image list
-          for image in $(docker images -q); do
-            docker rmi -f $image
-          done
-          # docker image prune -a
+          # for image in $(docker images -q); do
+          #   docker rmi -f $image
+          # done
+          # 删除所有不再使用的 docker 镜像、容器、网络和数据卷
+          docker image prune -a
           # 如果环境变量 AGENT_TOOLSDIRECTORY 不为空，则删除该目录及其所有内容
           [[ -n "${AGENT_TOOLSDIRECTORY}" ]] && sudo rm -rf "${AGENT_TOOLSDIRECTORY}"
           # 删除指定的目录及其所有内容，忽略所有错误信息
