--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -9,12 +9,8 @@ jobs:
     name: Build LineageOS
     runs-on: ubuntu-24.04
     steps:
-      # - name: Checkout repository
-      #   uses: actions/checkout@main
-
       - name: Clear environment
         id: clearinit
-        # if: ${{ 'true' == 'false' }} # disable
         env:
           DEBIAN_FRONTEND: noninteractive
         working-directory: /
@@ -56,6 +52,7 @@ jobs:
           sudo -E apt-get -qq -y purge "${packages_purge[@]}" || true
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
+          sudo -E systemctl daemon-reload
 
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
