--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -179,7 +179,7 @@ jobs:
           sudo mkfs.xfs /dev/github/runner
           sudo mkdir -p "${path_build}"
           sudo mount /dev/github/runner "${path_build}"
-          sudo chown -R runner.runner "${path_build}"
+          sudo chown -R runner:runner "${path_build}"
 
           # 打印挂载信息以确认成功
           df -Th
