--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -149,15 +149,16 @@ jobs:
           sudo pvcreate /dev/loop6
           sudo pvcreate /dev/loop7
           sudo vgcreate github /dev/loop6 /dev/loop7
-          sudo lvcreate -n runner -l 100%FREE github
 
-          # 在逻辑卷上创建 XFS 文件系统并挂载
+          # 在 github 卷组上创建一个名为 runner 的逻辑卷，使用所有可用空间, 在 runner 逻辑卷上创建一个 XFS 文件系统
+          sudo lvcreate -n runner -l 100%FREE github
           sudo mkfs.xfs /dev/github/runner
+
+          # 创建一个挂载点 ${path_build}, 将 runner 逻辑卷挂载到 ${path_build}, 将 ${path_build} 的所有者和组更改为 runner
           sudo mkdir -p "${path_build}"
           sudo mount /dev/github/runner "${path_build}"
           sudo chown -R runner:runner "${path_build}"
-
-          # 打印挂载信息以确认成功
+          
           df -Th
           echo "status=success" >> "${GITHUB_OUTPUT}"
 
