--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -209,6 +209,9 @@ jobs:
           mkdir -p ~/bin
           curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
           chmod a+rx ~/bin/repo
+          # if [ -d "$HOME/bin" ] ; then
+          #   export PATH="$HOME/bin:$PATH"
+          # fi
 
       - name: Initialize LineageOS source
         working-directory: ${{ env.path_build }}
@@ -217,10 +220,10 @@ jobs:
           export PATH=~/bin:$PATH
 
           repo init -u https://github.com/LineageOS/android.git \
-            --manifest-branch ${{ env.manifest-branch }} \
-            --depth=1 \
-            --git-lfs \
-            --verbose
+            --manifest-branch ${{ env.manifest-branch }}
+            # --depth=1 \
+            # --git-lfs \
+            # --verbose
           
           df -Th
           echo "Repository initialized"
@@ -232,7 +235,7 @@ jobs:
           echo "Current working directory: $(pwd)"
           export PATH=~/bin:$PATH
 
-          repo sync -j$(($(nproc) + 1))
+          repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
           df -Th
           echo "Source code synced"
 
@@ -248,7 +251,7 @@ jobs:
           source build/envsetup.sh
           breakfast ${{ env.target }}
           croot
-          brunch ${{ env.target }}
+          brunch ${{ env.target }} -j$(nproc --all)
           echo "Build completed"
 
       - name: Upload OpenWrt to Release
