--- a/.github/workflows/build-pixelexperience.yml
+++ b/.github/workflows/build-pixelexperience.yml
@@ -196,8 +196,13 @@ jobs:
         if: ${{ 'true' == 'false' }} # disable
         working-directory: /
         run: |
+          sudo mkdir /mnt/ccache
+          sudo mount --bind /home/<your_account_username>/.cache/ccache /mnt/ccache
+          
           export USE_CCACHE=1
           export CCACHE_EXEC=/usr/bin/ccache
+          export CCACHE_DIR=/mnt/ccache
+
           ccache -M 50G
           ccache -o compression=true
 
