--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -254,6 +254,9 @@ jobs:
 
           source build/envsetup.sh
           breakfast ${{ env.android-version }}
+
+          bash ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          
           croot
           brunch ${{ env.android-version }} -j$(nproc --all)
           echo "Build completed"
