--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -253,6 +253,8 @@ jobs:
           export PATH=~/bin:$PATH
 
           # bash ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          ls -lh
+          ls -lh ./vendor/xiaomi/sm6125-common/
           ./vendor/xiaomi/sm6125-common/setup-makefiles.sh
 
           source build/envsetup.sh
