--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -257,14 +257,20 @@ jobs:
 
           echo "===== breakfast ${{ env.android-version }} ====="
           set +e
+
           breakfast ${{ env.android-version }}
+
           ls -lh
-          ls -lh ./device/
           ls -lh ./vendor/
           ls -lh ./vendor/xiaomi/
           ls -lh ./vendor/xiaomi/sm6125-common/
+          ls -lh ./device/
+          ls -lh ./device/xiaomi/
+          ls -lh ./device/xiaomi/sm6125-common/
+
           # bash ./device/xiaomi/sm6125-common/setup-makefiles.sh
           ./vendor/xiaomi/sm6125-common/setup-makefiles.sh
+          
           set -e
 
           echo "===== croot ====="
