--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -257,9 +257,7 @@ jobs:
 
           echo "===== breakfast ${{ env.android-version }} ====="
           set +e
-
           breakfast ${{ env.android-version }}
-
           ls -lh
           ls -lh ./vendor/
           ls -lh ./vendor/xiaomi/
@@ -267,12 +265,12 @@ jobs:
           ls -lh ./device/
           ls -lh ./device/xiaomi/
           ls -lh ./device/xiaomi/sm6125-common/
-
           # bash ./device/xiaomi/sm6125-common/setup-makefiles.sh
           ./vendor/xiaomi/sm6125-common/setup-makefiles.sh
           ./device/xiaomi/sm6125-common/setup-makefiles.sh
-          
           set -e
+          
+          breakfast ${{ env.android-version }}
 
           echo "===== croot ====="
           croot
