--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -265,11 +265,11 @@ jobs:
           ls -lh ./device/
           ls -lh ./device/xiaomi/
           ls -lh ./device/xiaomi/sm6125-common/
-          # bash ./device/xiaomi/sm6125-common/setup-makefiles.sh
-          ./vendor/xiaomi/sm6125-common/setup-makefiles.sh
+
+          cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
           ./device/xiaomi/sm6125-common/setup-makefiles.sh
           set -e
-          
+
           breakfast ${{ env.android-version }}
 
           echo "===== croot ====="
