--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -260,14 +260,17 @@ jobs:
           breakfast ${{ env.android-version }}
           ls -lh
           ls -lh ./vendor/
-          ls -lh ./vendor/xiaomi/
-          ls -lh ./vendor/xiaomi/sm6125-common/
+          # ls -lh ./vendor/xiaomi/
+          # ls -lh ./vendor/xiaomi/sm6125-common/
           ls -lh ./device/
           ls -lh ./device/xiaomi/
           ls -lh ./device/xiaomi/sm6125-common/
 
           cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
-          ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          export DEVICE_COMMON=sm6125-common
+          export DEVICE=ginkgo
+          export VENDOR=xiaomi
+          source ./device/xiaomi/sm6125-common/setup-makefiles.sh
           set -e
 
           breakfast ${{ env.android-version }}
