--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -277,8 +277,8 @@ jobs:
 
           echo "===== croot ====="
           croot
-          echo "===== brunch ${{ env.android-version }} -j$(nproc --all) ====="
-          brunch ${{ env.android-version }} -j$(nproc --all)
+          echo "===== brunch ${{ env.android-version }} ====="
+          brunch ${{ env.android-version }}
           
           echo "Build completed"
 
