--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -7,7 +7,7 @@ on:
       manifest-branch:
         description: 'Manifest branch'
         required: true
-        default: 'lineage-18.1'
+        default: 'lineage-19.1'
         type: string
       android-version:
         description: 'Android version'
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-24.04
     env:
       path_build: "/android/lineage"
-      manifest-branch: ${{ inputs.manifest-branch || 'lineage-18.1' }}
+      manifest-branch: ${{ inputs.manifest-branch || 'lineage-19.1' }}
       android-version: ${{ inputs.android-version || 'ginkgo' }}
     steps:
       - name: Set environment variable
@@ -266,13 +266,16 @@ jobs:
           ls -lh ./device/xiaomi/
           ls -lh ./device/xiaomi/sm6125-common/
           
-          echo "===== $(realpath ./device/xiaomi/sm6125-common/setup-makefiles.sh) ====="
+          echo "===== ./device/xiaomi/sm6125-common/setup-makefiles.sh ====="
           cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
           export DEVICE_COMMON=sm6125-common
           export DEVICE=ginkgo
           export VENDOR=xiaomi
           source ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          echo "===== ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk ====="
           cat ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk
+          echo "===== ./vendor/xiaomi/sm6125-common/Android.mk ====="
+          cat ./vendor/xiaomi/sm6125-common/Android.mk
           set -e
 
           breakfast ${{ env.android-version }}
