--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -73,7 +73,7 @@ jobs:
             "ghc*"
             "zulu*"
             "llvm*"
-            "firefox"
+            "firefox*"
             "google*"
             "dotnet*"
             "powershell*"
