--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -5,14 +5,14 @@ on:
   workflow_dispatch:
     inputs:
       manifest-branch:
-        description: 'Manifest branch'
+        description: "Manifest branch"
         required: true
-        default: 'lineage-18.1'
+        default: "lineage-18.1"
         type: string
       android-version:
-        description: 'Android version'
+        description: "Android version"
         required: true
-        default: 'ginkgo'
+        default: "ginkgo"
         type: string
 
 jobs:
@@ -86,6 +86,7 @@ jobs:
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
+          apt list
 
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
@@ -145,9 +146,9 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@main
         with:
-          distribution: 'temurin'
-          java-version: '21'
-      
+          distribution: "temurin"
+          java-version: "21"
+
       - name: Create simulated physical disk
         id: disk
         env:
@@ -230,7 +231,7 @@ jobs:
             --depth=1 \
             --git-lfs \
             --verbose
-          
+
           df -Th
           echo "Repository initialized"
 
@@ -265,7 +266,7 @@ jobs:
           ls -lh ./device/
           ls -lh ./device/xiaomi/
           ls -lh ./device/xiaomi/sm6125-common/
-          
+
           echo "===== ./device/xiaomi/sm6125-common/setup-makefiles.sh ====="
           cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
           export DEVICE_COMMON=sm6125-common
@@ -284,7 +285,7 @@ jobs:
           croot
           echo "===== brunch ${{ env.android-version }} ====="
           brunch ${{ env.android-version }}
-          
+
           echo "Build completed"
 
       - name: Upload OpenWrt to Release
