--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -86,7 +86,7 @@ jobs:
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
-          apt list
+          apt list --installed
 
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
