--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -80,7 +80,7 @@ jobs:
             "mongodb*"
             "moby*"
           )
-          packages_abandon=(
+          packages_save=(
             "llvm*"
           )
           sudo -E apt-get -qq -y update
