--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -80,15 +80,22 @@ jobs:
             "mongodb*"
             "moby*"
           )
-          packages_save=(
-            "llvm*"
+          packages_abandon=(
+            "mysql*"
+            "postgresql*"
+            "sqlite3*"
+            "apache2*"
+            "nginx*"
+            "php*"
           )
           sudo -E apt-get -qq -y update
           sudo -E apt-get -qq -y purge "${packages_purge[@]}" || true
+          sudo -E apt-get -qq -y purge "${packages_abandon[@]}" || true
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
           apt list --installed
+          dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
 
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
