--- a/.github/workflows/build-pixelexperience.yml
+++ b/.github/workflows/build-pixelexperience.yml
@@ -61,26 +61,50 @@ jobs:
           sudo swapoff -a
           sudo rm -f /swapfile /mnt/swapfile
 
-          # 删除所有不再需要的软件包及其配置文件, 清理 apt 的缓存
+          # ===== Remove snap =====
+          for p in $(snap list | awk '{print $1}'); do
+            sudo snap remove $p
+          done
+          sudo systemctl stop snapd
+          sudo systemctl disable --now snapd.socket
+          sudo apt-get -qq -y autoremove --purge snapd
+          sudo rm -rf ~/snap
+          sudo rm -rf /snap
+          sudo rm -rf /var/snap
+          sudo rm -rf /var/lib/snapd
+          sudo rm -rf /var/cache/snapd
+          sudo bash -c 'cat <<EOF > /etc/apt/preferences.d/nosnap.pref
+          Package: snapd
+          Pin: release a=*
+          Pin-Priority: -10
+          EOF'
+
+          # ===== Clean apt =====
           packages_purge=(
-            "azure-cli*"
             "docker*"
             "ghc*"
             "zulu*"
-            "llvm*"
-            "firefox"
             "google*"
+            "firefox*"
             "dotnet*"
             "powershell*"
             "openjdk*"
             "mongodb*"
             "moby*"
+            "mysql*"
+            "postgresql*"
+            "sqlite3*"
+            "apache2*"
+            "nginx*"
+            "php*"
           )
           sudo -E apt-get -qq -y update
           sudo -E apt-get -qq -y purge "${packages_purge[@]}" || true
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
+          apt list --installed
+          dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
 
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
@@ -110,7 +134,7 @@ jobs:
             "lib32readline-dev" 
             "lib32z1-dev"
             "libelf-dev" 
-            "liblz4-tool" 
+            "lz4" 
             "libsdl1.2-dev" 
             "libssl-dev"
             "libxml2" 
@@ -198,7 +222,7 @@ jobs:
         run: |
           sudo mkdir /mnt/ccache
           sudo mount --bind /home/<your_account_username>/.cache/ccache /mnt/ccache
-          
+
           export USE_CCACHE=1
           export CCACHE_EXEC=/usr/bin/ccache
           export CCACHE_DIR=/mnt/ccache
